Dropdown - Fix for Firefox & Safari where on initial open transition vertical scrollbars were present

--- a/packages/components/bolt-dropdown/src/dropdown.scss
+++ b/packages/components/bolt-dropdown/src/dropdown.scss
@@ -406,6 +406,7 @@ bolt-dropdown {
 
 .c-bolt-dropdown__content--open {
   display: block;
+  overflow: hidden;
   transition: height 0.2s ease;
   transform: translate3d(0, 0, 0);
 }
